<resources>
    <string name="app_name">IdentityChain</string>
    <string name="my_external_ip">My external ip is:</string>
    <string name="my_local_ip">My local ip is:</string>
    <string name="connect_ip_hint">127.0.0.1</string>
    <string name="connect_port_hint">port</string>
    <string name="default_port">8080</string>
    <string name="connect_to">Connect to IP</string>
    <string name="connect">connect</string>
    <string name="reset_database_button">Clear Database (closes app)</string>

    <string name="title_activity_key">Key management</string>
    <string name="bluetooth_connection">bluetooth_connection</string>
    <string name="public_key">Public key</string>
    <string name="private_key">Private key</string>
    <string name="create_key">Create new key</string>
    <string name="show_key">Show key</string>
    <string name="verify_sig">Verify signature</string>
    <string name="storage_permission_explanation">Give permission for storage!</string>
    <string name="sign_data">Sign data!</string>
    <string name="valid_signature">Valid signature</string>
    <string name="invalid_signature">Invalid signature</string>
    <string name="chain_explorer">TrustChain Explorer</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>

    <string name="item_public_key">Public key:</string>
    <string name="item_link_public_key">Link public key:</string>
    <string name="item_prev_hash">Previous hash:</string>
    <string name="item_signature">Signature:</string>
    <string name="item_transaction">Transaction:</string>

    <string name="fingerprint_scan">Please scan your fingerprint</string>

    <string name="bluetooth_explanation">First pair with a device via the Android bluetooth manager. After the two devices are paired press on the desired device to initiate a connection.</string>
    <string name="bluetooth_button">Bluetooth</string>
    <string name="FingerprintDeclinedText">Fingerprint declined. Please try again</string>
    <string name="choose_device_to_connect">Choose device to connect</string>
    <string name="confirmation_button_text">Confirm</string>

</resources>
