<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.tudelft.cs4160.trustchain_android.KeyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/private_key" />

        <EditText
            android:id="@+id/private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/new_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_key" />

        <Button
            android:id="@+id/sign_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_data" />

        <Button
            android:id="@+id/verify_sig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_sig" />

        <EditText
            android:id="@+id/signed_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
