<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/top_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingRight="16dp"
        android:paddingTop="4dp">

        <View
            android:id="@+id/own_chain_indicator"
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:background="@android:color/transparent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="6dp">
                    <TextView
                        android:id="@+id/peer"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:text="peer"/>

                    <TextView
                        android:id="@+id/sequence_number"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:text="seqNum"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="6dp">
                    <TextView
                        android:id="@+id/link_peer"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:text="Link peer"/>

                    <TextView
                        android:id="@+id/link_sequence_number"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:text="linkSeq"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:padding="2dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:textSize="12sp"
                    android:maxLines="2"
                    android:ellipsize="middle"
                    android:text="transaction"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="2dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/expand_arrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_more_black_24dp" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/expanded_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:visibility="gone"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp">

        <TableRow>
            <TextView
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/item_public_key"/>

            <TextView
                android:id="@+id/pub_key"
                android:textSize="13sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/item_link_public_key"/>

            <TextView
                android:id="@+id/link_pub_key"
                android:textSize="13sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/item_prev_hash"/>

            <TextView
                android:id="@+id/prev_hash"
                android:textSize="13sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/item_signature"/>

            <TextView
                android:id="@+id/signature"
                android:textSize="13sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/item_transaction"/>

            <TextView
                android:id="@+id/expanded_transaction"
                android:textSize="13sp"/>
        </TableRow>

    </TableLayout>

</LinearLayout>